--- a/index.html
+++ b/index.html
@@ -8,95 +8,129 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Playfair Display', serif;
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Playfair Display',serif;}
+body{
+  background:#fff0f6;
+  color:#5a0f2e;
+  overflow-x:hidden;
 }
 
-body {
-  background: #fff0f6;
-  color: #5a0f2e;
-  overflow-x: hidden;
+/* INTRO */
+.intro{
+  position:fixed;
+  inset:0;
+  background:black;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:white;
+  font-size:2em;
+  opacity:0;
+  animation:introFade 6s ease forwards;
+  z-index:10;
 }
-
-/* BLACK INTRO */
-.intro {
-  position: fixed;
-  inset: 0;
-  background: black;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2em;
-  z-index: 10;
-  animation: fadeOut 3s ease forwards;
-  animation-delay: 3s;
-}
-
-@keyframes fadeOut {
-  to { opacity: 0; visibility: hidden; }
+@keyframes introFade{
+  0%{opacity:0;}
+  30%{opacity:1;}
+  70%{opacity:1;}
+  100%{opacity:0;visibility:hidden;}
 }
 
 /* HERO */
-.hero {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background: linear-gradient(180deg, #ffd6e8, #fff0f6);
+.hero{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  background:linear-gradient(180deg,#ffd6e8,#fff0f6);
+}
+.hero h1{font-size:2.4em;}
+
+/* SECTION */
+.section{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  padding:40px 20px;
+  position:relative;
 }
 
-.hero h1 {
-  font-size: 2.4em;
+/* BOX */
+.box{
+  max-width:480px;
+  padding:32px;
+  background:rgba(255,255,255,0.78);
+  backdrop-filter:blur(10px);
+  border-radius:20px;
+  font-size:1.15em;
+  line-height:2;
+  opacity:0;
+  box-shadow:0 20px 40px rgba(0,0,0,0.08);
 }
 
-/* MESSAGE BOXES */
-.section {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  padding: 40px;
+/* POSITIONS */
+.right{margin-left:auto;text-align:right;}
+.left{margin-right:auto;text-align:left;}
+.center{margin:auto;text-align:center;font-size:1.3em;}
+
+/* HIGHLIGHTS */
+.highlight{
+  color:#ff4d88;
+  font-weight:600;
+}
+.soft{
+  color:#b83260;
 }
 
-.box {
-  max-width: 420px;
-  font-size: 1.2em;
-  line-height: 1.8;
-  opacity: 0;
+/* UNDERLINE ANIMATION */
+.underline{
+  position:relative;
+  display:inline-block;
+}
+.underline::after{
+  content:'';
+  position:absolute;
+  left:0;
+  bottom:-4px;
+  width:0;
+  height:2px;
+  background:#ff4d88;
+  animation:draw 2s forwards;
+}
+@keyframes draw{
+  to{width:100%;}
 }
 
-.right { margin-left: auto; text-align: right; }
-.left { margin-right: auto; text-align: left; }
-.center { margin: auto; text-align: center; font-size: 1.4em; }
+/* REVEAL ANIMATIONS */
+.show-right{animation:fromRight 2s forwards;}
+.show-left{animation:fromLeft 2s forwards;}
+.show-center{animation:fadeUp 2.5s forwards;}
 
-/* ANIMATIONS */
-.show-right {
-  animation: slideRight 1.5s forwards;
+@keyframes fromRight{
+  from{transform:translateX(140px);opacity:0;}
+  to{transform:translateX(0);opacity:1;}
 }
-.show-left {
-  animation: slideLeft 1.5s forwards;
+@keyframes fromLeft{
+  from{transform:translateX(-140px);opacity:0;}
+  to{transform:translateX(0);opacity:1;}
 }
-.show-center {
-  animation: fadeUp 2s forwards;
-}
-
-@keyframes slideRight {
-  from { transform: translateX(80px); opacity: 0; }
-  to { transform: translateX(0); opacity: 1; }
+@keyframes fadeUp{
+  from{transform:translateY(80px);opacity:0;}
+  to{transform:translateY(0);opacity:1;}
 }
 
-@keyframes slideLeft {
-  from { transform: translateX(-80px); opacity: 0; }
-  to { transform: translateX(0); opacity: 1; }
+/* FLOATING HEARTS */
+.heart{
+  position:fixed;
+  bottom:-20px;
+  font-size:18px;
+  animation:float 10s linear infinite;
+  opacity:0.5;
 }
-
-@keyframes fadeUp {
-  from { transform: translateY(40px); opacity: 0; }
-  to { transform: translateY(0); opacity: 1; }
+@keyframes float{
+  from{transform:translateY(0);}
+  to{transform:translateY(-120vh);opacity:0;}
 }
 </style>
 </head>
@@ -114,50 +148,90 @@ body {
 </div>
 
 <div class="section">
-  <div class="box right" id="msg1">
-    You didn’t just give me a gift…<br>
-    You gave me effort.
+  <div class="box right" id="m1">
+    I didn’t plan any of this 💗<br><br>
+    But somehow you became my <span class="highlight underline">favorite part</span> of every day 💗
   </div>
 </div>
 
 <div class="section">
-  <div class="box left" id="msg2">
-    You spent money on me…<br>
-    and that means everything to me.
+  <div class="box left" id="m2">
+    You gifted me stickers 💗<br><br>
+    Which not might be a big deal for you but for me it was because it came from <span class="soft underline">you</span> 💗
   </div>
 </div>
 
 <div class="section">
-  <div class="box center" id="msg3">
-    One month with you feels unreal.<br><br>
-    I love the way you care,<br>
-    the way you choose me,<br>
-    and the way you make my world softer.<br><br>
-    I’m staying. Always.
+  <div class="box right" id="m3">
+    You spent money on me 😭💗<br><br>
+    And that effort…<br>
+    I felt it deep 💗
+  </div>
+</div>
+
+<div class="section">
+  <div class="box left" id="m4">
+    I notice everything 😭💗<br><br>
+    Your care,<br>
+    your patience,<br>
+    your way of choosing me 💗
+  </div>
+</div>
+
+<div class="section">
+  <div class="box center" id="m5">
+    One month 😭💗<br><br>
+    And you already feel like <span class="highlight underline">home</span> 💗<br><br>
+    I’m not perfect,<br>
+    but my heart is yours 😭💗
+  </div>
+</div>
+
+<div class="section">
+  <div class="box center" id="m6">
+    This is just the beginning 💗<br><br>
+    I’ll stay.<br>
+    No matter what 😭💗<br><br>
+    Happy One Month Anniversary Mummaa 😋💗<br><br>
+    — your mona 😋💗
   </div>
 </div>
 
 <script>
-const audio = document.getElementById("bgm");
-let played = false;
+/* FLOATING HEARTS */
+for(let i=0;i<20;i++){
+  const h=document.createElement("div");
+  h.className="heart";
+  h.innerText="💗";
+  h.style.left=Math.random()*100+"vw";
+  h.style.animationDelay=Math.random()*10+"s";
+  document.body.appendChild(h);
+}
 
-function reveal(id, cls) {
-  const el = document.getElementById(id);
-  const rect = el.getBoundingClientRect();
-  if (rect.top < window.innerHeight - 100) {
+/* MUSIC + REVEAL */
+const audio=document.getElementById("bgm");
+let played=false;
+
+function reveal(id,cls){
+  const el=document.getElementById(id);
+  const r=el.getBoundingClientRect();
+  if(r.top<window.innerHeight-120){
     el.classList.add(cls);
   }
 }
 
-window.addEventListener("scroll", () => {
-  reveal("msg1", "show-right");
-  reveal("msg2", "show-left");
-  reveal("msg3", "show-center");
+window.addEventListener("scroll",()=>{
+  reveal("m1","show-right");
+  reveal("m2","show-left");
+  reveal("m3","show-right");
+  reveal("m4","show-left");
+  reveal("m5","show-center");
+  reveal("m6","show-center");
 
-  if (!played) {
-    audio.volume = 0.5;
+  if(!played){
+    audio.volume=0.45;
     audio.play().catch(()=>{});
-    played = true;
+    played=true;
   }
 });
 </script>
